2024-07-22 그룹삭제 기능 구현(멤버삭제 수정 필요) GroupRepositoryImpl그룹삭제 개선